--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 .container {
     display: flex;
     flex-wrap: wrap;
+    margin: 0% 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+.square {
+    width: 28px;
+    height: 28px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: blueviolet;
+    background-color: lightgrey;
 }
