--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     margin: 0% 50%;
     align-items: center;
     justify-content: center;
+    border-style: dotted;
+    border-color: blue;
+    border-width: 1px;
 }
 
 .square {
@@ -11,6 +14,6 @@
     height: 28px;
     border-style: solid;
     border-width: 1px;
-    border-color: blueviolet;
-    background-color: lightgrey;
+    border-color: rgb(255, 255, 255);
+    background-color: white;
 }
