--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
+.lower {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+
+}
+
+.frame {
+    padding: 10px;
+    margin: 10px;
+    border-style: solid;
+    background-color: aqua;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
-    margin: 0% 50%;
-    align-items: center;
-    justify-content: center;
-    border-style: dotted;
-    border-color: blue;
-    border-width: 1px;
+    padding: 0px;
+    margin: 0% 0%;
+    align-items: flex-start;
+    justify-content: flex-start;
+    border-style: none;
+    background-color: white;
+    width: 400px;
+    height: 400px;
 }
 
 .square {
-    width: 28px;
-    height: 28px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(255, 255, 255);
-    background-color: white;
+    border-style: none;
 }
