--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
     align-items: center;
     margin: 2% 5%;
     background-image: url(./tile.png);
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;
 }
 
 h1 {
